--- a/gb/23/11/15/n14117292.md
+++ b/gb/23/11/15/n14117292.md
@@ -1,72 +1,73 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>“壮丽的波兰文化展” 布市多元文化馆开幕</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/11/id14117312-DSC01043_1-600x400.jpg" />
 <h6>11月9日晚间布里斯本Sunnybank多元文化馆“壮丽的波兰文化展”开幕，参与的贵宾、社区文化艺术爱好者在开幕后合影。（倪尔森／大纪元）
 </h6>
 <hr>
-<p>【大纪元2023年11月16日讯】（大纪元特约记者倪尔森、琳达澳洲<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B8%83%E9%87%8C%E6%96%AF%E6%9C%AC.md#1">布里斯本</a>报导）新利班<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%9A%E5%85%83%E6%96%87%E5%8C%96.md#1">多元文化</a>馆第十八档期“壮丽的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B3%A2%E5%85%B0.md#1">波兰</a>文化展”，于11月9日晚间在Sunnybank Plaza举办开幕仪式。多个国家驻<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B8%83%E9%87%8C%E6%96%AF%E6%9C%AC.md#1">布里斯本</a>领事、昆士兰台湾中心、台侨社区代表、波兰社区领袖、艺术家及各民族社团代表近百名踊跃出席。</p>
-<p>“壮丽的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B3%A2%E5%85%B0.md#1">波兰</a>文化展”由Sunnybank Plaza购物中心和世界<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%9A%E5%85%83%E6%96%87%E5%8C%96.md#1">多元文化</a>艺术协会联合主办。当日，驻布里斯本台北经济文化办事处、波兰、葡萄牙、斯洛伐克、斯里兰卡等驻昆士兰领事出席。</p>
-<figure id="attachment_14117313" aria-describedby="caption-attachment-14117313" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/11/id14117313-DSC01048_1-600x337.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-large wp-image-14117313" src="https://i.epochtimes.com/assets/uploads/2023/11/id14117313-DSC01048_1-600x337.jpg" alt="" width="600" b="337" /></a><figcaption id="caption-attachment-14117313" class="wp-caption-text">布里斯本Sunnybank多元文化馆“壮丽的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B3%A2%E5%85%B0%E6%96%87%E5%8C%96.md#1">波兰文化</a>展”开幕，参与的贵宾、社区文化艺术爱好者在多元文化馆前合影。（倪尔森／大纪元）</figcaption></figure>
-<p>开幕式由澳台文化基金会执行长林季平主持，Sunnybank Plaza和Sunnybank Park市场经理洛冈（Erin Logang）首先欢迎大家参加这次展览，了解更多关于<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B3%A2%E5%85%B0%E6%96%87%E5%8C%96.md#1">波兰文化</a>、传统和历史。</p>
+<p>【大纪元2023年11月16日讯】（大纪元特约记者倪尔森、琳达澳洲布里斯本报导）新利班多元文化馆第十八档期“壮丽的波兰文化展”，于11月9日晚间在Sunnybank Plaza举办开幕仪式。多个国家驻布里斯本领事、昆士兰台湾中心、台侨社区代表、波兰社区领袖、艺术家及各民族社团代表近百名踊跃出席。</p>
+<p>“壮丽的波兰文化展”由Sunnybank Plaza购物中心和世界多元文化艺术协会联合主办。当日，驻布里斯本台北经济文化办事处、波兰、葡萄牙、斯洛伐克、斯里兰卡等驻昆士兰领事出席。</p>
+<figure id="attachment_14117313" aria-describedby="caption-attachment-14117313" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/11/id14117313-DSC01048_1-600x337.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class="size-large wp-image-14117313" src="https://i.epochtimes.com/assets/uploads/2023/11/id14117313-DSC01048_1-600x337.jpg" alt="" width="600" b="337" /></a><figcaption id="caption-attachment-14117313" class="wp-caption-text">布里斯本Sunnybank多元文化馆“壮丽的波兰文化展”开幕，参与的贵宾、社区文化艺术爱好者在多元文化馆前合影。（倪尔森／大纪元）</figcaption></figure>
+<p>开幕式由澳台文化基金会执行长林季平主持，Sunnybank Plaza和Sunnybank Park市场经理洛冈（Erin Logang）首先欢迎大家参加这次展览，了解更多关于波兰文化、传统和历史。</p>
 <p>她说：“这个展览是对波兰文化的深入展现。”</p>
-<figure id="attachment_14117314" aria-describedby="caption-attachment-14117314" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/11/id14117314-DSC01012-600x337.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-large wp-image-14117314" src="https://i.epochtimes.com/assets/uploads/2023/11/id14117314-DSC01012-600x337.jpg" alt="" width="600" b="337" /></a><figcaption id="caption-attachment-14117314" class="wp-caption-text">雕塑“卡廷”是为了纪念 1940年在卡廷和苏联境内其他不知名的地方被苏联谋杀并埋葬在万人坑中的15,000名波兰战俘而创作的。（倪尔森／大纪元）</figcaption></figure>
+<figure id="attachment_14117314" aria-describedby="caption-attachment-14117314" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/11/id14117314-DSC01012-600x337.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class="size-large wp-image-14117314" src="https://i.epochtimes.com/assets/uploads/2023/11/id14117314-DSC01012-600x337.jpg" alt="" width="600" b="337" /></a><figcaption id="caption-attachment-14117314" class="wp-caption-text">雕塑“卡廷”是为了纪念 1940年在卡廷和苏联境内其他不知名的地方被苏联谋杀并埋葬在万人坑中的15,000名波兰战俘而创作的。（倪尔森／大纪元）</figcaption></figure>
 <p>波兰驻昆士兰领事劳夫博士（Dr Theresa Lauf）感谢波兰大使馆和Mr Maciej阁下的支持，这次展览不仅是澳大利亚和波兰之间，而且是波兰和台湾之间友谊的证明。</p>
-<p>劳夫博士说：“今年 7 月 29 日，为协助饱受蹂躏的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B9%8C%E5%85%8B%E5%85%B0.md#1">乌克兰</a>，台湾与波兰国际援助中心签署了合作协定。</p>
-<p>“根据协议，台湾将与波兰合作，重建医院、学校和老年人设施，并建立妇女就业中心和青年远端学习设施，人道主义援助物资也将被送往<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B9%8C%E5%85%8B%E5%85%B0.md#1">乌克兰</a>的难民避难所。</p>
+<p>劳夫博士说：“今年 7 月 29 日，为协助饱受蹂躏的乌克兰，台湾与波兰国际援助中心签署了合作协定。</p>
+<p>“根据协议，台湾将与波兰合作，重建医院、学校和老年人设施，并建立妇女就业中心和青年远端学习设施，人道主义援助物资也将被送往乌克兰的难民避难所。</p>
 <p>“台湾、乌克兰和波兰站在捍卫自由、民主和尊重人权的普世价值的第一线。正是在这样的时刻，我们意识到我们对澳大利亚多元文化的承诺不仅仅是道德上的当务之急，更是力量和创新的源泉。</p>
 <p>“文化多样性令昆士兰蓬勃发展，令我们的州更加繁荣和充满活力。”</p>
 <p>她介绍目前在澳洲有210,000名波兰人，其中33,000人在昆士兰。当晚一些最有才华的艺术家将展示美丽的波兰文化、充满挑战的历史、和充满希望的未来。</p>
-<figure id="attachment_14117315" aria-describedby="caption-attachment-14117315" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/11/id14117315-PXL_20231109_082413922-600x581.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-large wp-image-14117315" src="https://i.epochtimes.com/assets/uploads/2023/11/id14117315-PXL_20231109_082413922-600x581.jpg" alt="" width="600" b="581" /></a><figcaption id="caption-attachment-14117315" class="wp-caption-text">水彩画作品中的人物（右）正是这位波兰女士。（琳达／大纪元）</figcaption></figure>
+<figure id="attachment_14117315" aria-describedby="caption-attachment-14117315" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/11/id14117315-PXL_20231109_082413922-600x581.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class="size-large wp-image-14117315" src="https://i.epochtimes.com/assets/uploads/2023/11/id14117315-PXL_20231109_082413922-600x581.jpg" alt="" width="600" b="581" /></a><figcaption id="caption-attachment-14117315" class="wp-caption-text">水彩画作品中的人物（右）正是这位波兰女士。（琳达／大纪元）</figcaption></figure>
 <p>自Sunnybank多元文化馆成立以来，这是第18届展览。杨淑珠馆长说：“许多社区成员、艺术家、外交官、民意代表和社区领袖都以它（文化馆）的存在向我们致敬。”</p>
 <p>馆长表示，展品展现了波兰传统、文化、艺术和手工艺品之美。她也预告12月7日将举办今年的压轴展览——“德国节日和传统”，她欢迎所有人，及之前的展览召集人和艺术家共襄盛举。</p>
 <p>开幕式上，主办方向波兰社区颁发感谢状，感谢他们对这次展览的贡献，由波兰在当地组织的联合会会长埃尔兹别塔（Elzbieta）接受。</p>
 <p>埃尔兹别塔致词时表示，“展览不仅仅是我们的遗产文化，它是我们在澳洲共同创造和延续的故事，展览的目的不仅仅是展示丰富多彩的历史，同时也强调，这种遗产在现代仍在继续，证明传统与创新齐头并进，历史是后代的启发。”</p>
 <p>她也感谢在澳洲的各个波兰协会、团体与提供作品的艺术家对这次展览的协助。</p>
-<figure id="attachment_14117316" aria-describedby="caption-attachment-14117316" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/11/id14117316-PXL_20231109_085228423-600x338.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-large wp-image-14117316" src="https://i.epochtimes.com/assets/uploads/2023/11/id14117316-PXL_20231109_085228423-600x338.jpg" alt="" width="600" b="338" /></a><figcaption id="caption-attachment-14117316" class="wp-caption-text">开幕式中颁发感谢状，感谢波兰社区对这次展览的贡献，由波兰在昆士兰的组织联合会会长Elzbieta（中）接受。（琳达／大纪元）</figcaption></figure>
+<figure id="attachment_14117316" aria-describedby="caption-attachment-14117316" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/11/id14117316-PXL_20231109_085228423-600x338.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class="size-large wp-image-14117316" src="https://i.epochtimes.com/assets/uploads/2023/11/id14117316-PXL_20231109_085228423-600x338.jpg" alt="" width="600" b="338" /></a><figcaption id="caption-attachment-14117316" class="wp-caption-text">开幕式中颁发感谢状，感谢波兰社区对这次展览的贡献，由波兰在昆士兰的组织联合会会长Elzbieta（中）接受。（琳达／大纪元）</figcaption></figure>
 <p>接着由三位穿着波兰传统服饰的少女合唱民歌The Vistula（维斯瓦河），The longest river in Poland（波兰最长的河），赢得热烈的掌声。</p>
-<figure id="attachment_14117317" aria-describedby="caption-attachment-14117317" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/11/id14117317-PXL_20231109_085845286-600x352.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-large wp-image-14117317" src="https://i.epochtimes.com/assets/uploads/2023/11/id14117317-PXL_20231109_085845286-600x352.jpg" alt="" width="600" b="352" /></a><figcaption id="caption-attachment-14117317" class="wp-caption-text">三位穿着波兰传统服饰的少女合唱民歌The Vistula（维斯瓦河）。（琳达／大纪元）</figcaption></figure>
+<figure id="attachment_14117317" aria-describedby="caption-attachment-14117317" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/11/id14117317-PXL_20231109_085845286-600x352.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class="size-large wp-image-14117317" src="https://i.epochtimes.com/assets/uploads/2023/11/id14117317-PXL_20231109_085845286-600x352.jpg" alt="" width="600" b="352" /></a><figcaption id="caption-attachment-14117317" class="wp-caption-text">三位穿着波兰传统服饰的少女合唱民歌The Vistula（维斯瓦河）。（琳达／大纪元）</figcaption></figure>
 <p>本次档期为11月8日起至12月3日，文化馆每周三至周五上午11时至下午3时、周六与周日上午10: 30至下午4时开放，地点：Sunnybank Plaza 邮局隔壁。</p>
 <p>责任编辑：李心慈</p>
 <p><strong>了解更多澳洲即时要闻及生活资讯，请点击</strong><strong>?<ahref="http://dajiyuan.com.au/" data-cke-saved-href="http://dajiyuan.com.au/">dajiyuan.com.au</a></strong><br />
 <strong>（本文未经许可不得转载或建立镜像网站）</strong></p>
 <p>&nbsp;</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14116778.md#1">警方瓦解史上最大规模犯罪集团 28人落网</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/14/n14115865.md#1">新州火车故障信息将群发到通勤者手机</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/13/n14115839.md#1">消防喷头故障致隧道被淹 悉尼早高峰堵车27公里</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/13/n14115365.md#1">卧龙岗第二高楼被查出46项建筑缺陷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/13/n14115329.md#1">维州惨烈车祸 4名移民工当场死亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/13/n14115188.md#1">驻雪梨经文处与TSAA合办“台澳关系新展望”座谈会</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/12/n14115141.md#1">澳大利亚妇女健康：为华裔女性打造重要时刻！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/9/n14112752.md#1">独到眼光成就校园内亚洲首个智能摄制基地</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/10/n14113367.md#1">在高速路上随机开枪打过往车辆 两嫌犯被捕</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289024.md#1">一对母女陈尸悉尼西北区家中</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288617.md#1">雪梨海外青年文化大使2024年培训开放报名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288582.md#1">南极冷空气来袭 新州维州周日将再度降温</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288528.md#1">Kmart改变退货规则 8月1日生效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288438.md#1">化工厂火灾释放污染物 当局警告勿接触户外水源</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288268.md#1">悉尼父亲被控纵火烧死3名幼子</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287551.md#1">化工厂爆炸起火 墨尔本上空毒雾弥漫</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287394.md#1">跳下站台捡东西 女子在悉尼西南区被火车撞死</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14286632.md#1">悉尼市中心公路限速将下调 驾车者需注意标识牌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14286618.md#1">昆州侨界举办双十国庆筹备会议 意见交流凝聚共识</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/10/7/27/n2977832.md#1" target="_blank">鲜为人知的马克思之七：渎神的马克思</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/2/8/n10127794.md#1" target="_blank">豪门女总裁的私人生活</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/29/n11011288.md#1" target="_blank">林辉：西安军事叛变前夜毛收到张杨密电</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/5/n10279698.md#1" target="_blank">百岁老人：法轮功延长了我的寿命</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/12/n14115070.md#1">印尼巴东山发现至今最古老金字塔</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/8/n14112353.md#1">很久很久以前：维多利亚时代的仙子画</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/10/n14113379.md#1">【未解之谜】马前课（下）红朝国运大变更？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/7/n14111628.md#1">四位相师的神异之事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/8/n14112219.md#1">跟我学唐诗（1）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/14/n14116378.md#1">【环球直击】APEC峰会场外现抗议中共标语</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117101.md#1">【新闻大破解】拜登警告中共：勿干预台大选</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117050.md#1">【时事金扫描】中共党魁访美 上百团体聚集抗议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/14/n14115899.md#1">传北大老人质疑李克强之死 程虹或收到警告</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/14/n14115847.md#1">美智库谈APEC：中共处于最脆弱时刻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/13/n14115767.md#1">【秦鹏观察】双11有多惨？整体“密不发丧”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/12/n14115112.md#1">中国导演车径行病亡 终年51岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/13/n14115783.md#1">录大陆节目惹怒主办方？周海媚遭取消演出</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/14/n14115941.md#1">《惊奇队长2》票房差 作家史蒂芬金表达看法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/13/n14115738.md#1">何雁诗自曝儿子发育迟缓 1岁半还不会爬行</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/13/n14115272.md#1">《NHK红白赛》多组K-POP艺人参与 无杰尼斯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/31/n14107124.md#1">亚马逊美容护肤品大促销 优惠精选</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102768.md#1">有助于改善关节炎、关节疼痛的4类食物</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/13/n14115436.md#1">水管工人在厕所里不会做这些事 记住别犯错</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/24/n14101584.md#1">【医道心传】甩掉骨质疏松3攻略：补钙+运动+食疗</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/7/n14111536.md#1">球员心脏骤停这样救回 1分钟学会心肺复苏术</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285355.md#1">奇怪的数学家（In our Prime）观影有感</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14286821.md#1">【晚间新闻】美国会议长：推动全面抗中共法案</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14286981.md#1">【菁英论坛】冲击人类多方面 AI发展遇瓶颈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287904.md#1">【时事金扫描】北京玩一石几鸟 北约瞄准亚太</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285774.md#1">躺不平卷不动 中国多地出现“青年养老院”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282494.md#1">2024年最好的14款日本车 本田思域居首</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284641.md#1">抢先看 苹果新一代iPhone16带来何种变化</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286463.md#1">孙俪自曝被夸“天选打工人” 帖文引两极论战</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14287232.md#1">武打明星钱小豪被传疾病缠身 暴瘦近照曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286087.md#1">《加菲猫：农场大冒险》优于旧作 7月线上发行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14285855.md#1">《神偷奶爸4》北美票房登冠 《脑筋急转弯2》让位</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286090.md#1">Lia将重启活动 直播落泪感谢ITZY成员与粉丝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286069.md#1">为何飞机从起点到终点的飞行路线非一直线？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287637.md#1">专家：随着年龄老化 你应该多吃这种食物</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14264016.md#1">午觉睡太久 小心失智 心血管疾病上身！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14286686.md#1">考场天花板很高 竟会让学生考试成绩变差？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285431.md#1">10方法升级玉米罐头 轻松享有粗粮美食</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/11/15/n14117292.htm">“壮丽的波兰文化展” 布市多元文化馆开幕</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117292.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/23/11/15/n14117292.htm">“壮丽的波兰文化展” 布市多元文化馆开幕</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/11/15/n14117292.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
